Remove WebSocket connection

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <script src="lib/js/html5shiv.js"></script>
     <![endif]-->
     <script language="javascript" type="text/javascript">
-        function init()
-        {
-            websocket = new WebSocket("ws://"+window.location.host+"/websocket");
-            websocket.onmessage = function(evt) { location.reload(); };
-        }
-        window.addEventListener("load", init, false);
+        // function init()
+        // {
+        //     websocket = new WebSocket("ws://"+window.location.host+"/websocket");
+        //     websocket.onmessage = function(evt) { location.reload(); };
+        // }
+        // window.addEventListener("load", init, false);
     </script>
 </head>
 <body>
